--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 django==3.2.15
 django-debug-toolbar==3.2.1
-Pillow==8.2.0
+Pillow==9.3.0
 environs[django]==9.3.2
 django-phonenumber-field[phonenumbers]==7.0.0
 requests==2.28.1
 geopy==2.3.0
+djangorestframework==3.14.0
+django-filter==22.1
+markdown==3.4.1
+gunicorn==20.1.0
+rollbar==0.16.3
